--- a/index.html
+++ b/index.html
@@ -1,21 +1,40 @@
-<!doctype html>
-<html lang="nl">
-	
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title>Howdy FED2122</title>
-	
-	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheet.css">
+    <title>Document</title>
 </head>
-
 <body>
-	<h1>Howdy FED2122</h1>
-
-	<script src="scripts/script.js"></script>
+    <header>
+        <nav>
+            <ol>
+                <li><button href="#" alt=""></button></li>
+                <li><a href="#"><img src="images/search.png" alt=""></a></li>
+                <li><a href="#"><img src="images/ps.png" alt=""></a></li>
+                <li><a href="#">Sign in</a></li>
+            </ol>
+        </nav>
+    </header>
+    <main>
+        <article>
+            <h1>PlayStation Showcase</h1>
+            <p>Join us Thursday, September 9 at 1pm PDT/9pm BST for a look into the future of PS5.</p>
+            <a>Watch now</a>
+        </article>
+        
+    </main>
+    <section>
+        <a href="#">Games</a>
+        <a href="#">Hardware</a>
+        <a href="#">Services</a>
+        <a href="#">News</a>
+        <a href="#">Shop</a>
+        <a href="#">Support</a>
+    </section>
+    <footer></footer>
 </body>
-	
+<script src="scripts/script.js"></script>
 </html>
