--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </header>
     <main>
         <article>
-            <h1>PlayStation Showcase</h1>
-            <p>Join us Thursday, September 9 at 1pm PDT/9pm BST for a look into the future of PS5.</p>
-            <a>Watch now</a>
+            <h1>Coming 2022</h1>
+            <p>Kratos and Atreus embark on a mythic journey for answers and allies before Ragnarök arrives.</p>
+            <a>Find out more</a>
         </article>
         
     </main>
@@ -36,5 +36,6 @@
     </section>
     <footer></footer>
 </body>
-<script src="scripts/script.js"></script>
+
 </html>
+<script src="scripts/script.js"></script>
