--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <body>
     <header>
         <nav>
+            <section>
+                <a href="#">Games</a>
+                <a href="#">Hardware</a>
+                <a href="#">Services</a>
+                <a href="#">News</a>
+                <a href="#">Shop</a>
+                <a href="#">Support</a>
+            </section>
             <ol>
                 <li><button href="#" alt=""></button></li>
                 <li><a href="#"><img src="images/search.png" alt=""></a></li>
@@ -18,23 +26,28 @@
             </ol>
         </nav>
     </header>
+
     <main>
         <article>
             <h1>Coming 2022</h1>
             <p>Kratos and Atreus embark on a mythic journey for answers and allies before Ragnarök arrives.</p>
             <a>Find out more</a>
         </article>
-        
+        <article>
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+        </article>
     </main>
-    <section>
-        <a href="#">Games</a>
-        <a href="#">Hardware</a>
-        <a href="#">Services</a>
-        <a href="#">News</a>
-        <a href="#">Shop</a>
-        <a href="#">Support</a>
-    </section>
-    <footer></footer>
+    
+    <footer>
+        <nav>
+            <ol>
+                <li><a href="#"><img src="images/sonylogo.png" alt=""></a></li>
+            </ol>
+        </nav>
+
+    </footer>
 </body>
 
 </html>
