--- a/index.html
+++ b/index.html
@@ -7,20 +7,30 @@
     <link rel="stylesheet" href="stylesheet.css">
     <title>Document</title>
 </head>
-<body>
+<body id="page1">
     <header>
+        <div>
+            <figure></figure>
+        </div>
+        
         <nav>
             <section>
                 <a href="#">Games</a>
                 <a href="#">Hardware</a>
                 <a href="#">Services</a>
-                <a href="#">News</a>
+                <a href="news.html">News</a>
                 <a href="#">Shop</a>
                 <a href="#">Support</a>
             </section>
+            <section>
+                <form action="/action_page.php">
+                    <label for="zoek">Zoek</label>
+                    <input type="text" id="veld" name="zoek">
+                  </form>
+            </section>
             <ol>
                 <li><button href="#" alt=""></button></li>
-                <li><a href="#"><img src="images/search.png" alt=""></a></li>
+                <li><button href="#" alt=""></button></li>
                 <li><a href="#"><img src="images/ps.png" alt=""></a></li>
                 <li><a href="#">Sign in</a></li>
             </ol>
@@ -43,7 +53,7 @@
     <footer>
         <nav>
             <ol>
-                <li><a href="#"><img src="images/sonylogo.png" alt=""></a></li>
+                <li><a href="#"><img src="images/sonylogo2_wit.png" alt=""></a></li>
             </ol>
         </nav>
 
