--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div>
             <figure></figure>
-        </di>
+        </div>
         
         <nav>
             <section>
@@ -23,14 +23,14 @@
                 <a href="#">Support</a>
             </section>
             <section>
-                <form action="/action_page.php">
+                <form action="">
                     <label for="zoek">Zoek</label>
                     <input type="text" id="veld" name="zoek">
                   </form>
             </section>
             <ol>
-                <li><button href="#" alt=""></button></li>
-                <li><button href="#" alt=""></button></li>
+                <li><button></button></li>
+                <li><button></button></li>
                 <li><a href="#"><img src="images/ps.png" alt=""></a></li>
                 <li><a href="#">Sign in</a></li>
             </ol>
