--- a/news.html
+++ b/news.html
@@ -12,14 +12,14 @@
         <nav>
             <ol>
                 <li><a href="index.html"><img src="images/sonylogo_wit.png" alt="Playstationlogo"></a></li>
-                <p>Playstation<b>.Blog</b></p>
+                <li> <p>Playstation<b>.Blog</b></p></li> 
             </ol>
         </nav>
     </header>
 
     <main>
         <article>
-            <img  src="images/news_1.webp" alt="spel afbeelding"></img>
+            <img src="images/news_1.webp" alt="spel afbeelding"></img>
             <h1>Unlock the The Elder Scrolls Online Deadlands DLC for free</h1>
             <p> <b>Dominic Davies</b> <br>
                 Lead Content Manager, Zenimax Online Studios</p>
@@ -44,7 +44,7 @@
     <footer>
         <nav>
             <ol>
-                <img src="images/sonylogo2_wit.png" alt=""></img>
+               <li> <img src="images/sonylogo2_wit.png" alt=""></img></li>
             </ol>
         </nav>
 
