--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="#">Support</a>
             </section>
             <section>
-                <form action="">
+                <form >
                     <label for="zoek">Zoek</label>
                     <input type="text" id="veld" name="zoek">
                   </form>
@@ -59,6 +59,5 @@
 
     </footer>
 </body>
-
-</html>
 <script src="scripts/script.js"></script>
+</html>
