--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <ol>
                 <li><button></button></li>
                 <li><button></button></li>
-                <li><a href="#"><img src="images/ps.png" alt=""></a></li>
+                <li><a href="#"><img src="images/ps.png" alt=""></img></a></li>
                 <li><a href="#">Sign in</a></li>
             </ol>
         </nav>
